# Enterprise-RAG-Stack

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: logging_config.yaml  model_config.yaml
docs/: README.md
scripts/: build_embeddings.py  cleanup.py  run_tests.sh  setup_env.sh
src/: __init__.py
src/core/: __init__.py  base_llm.py  claude_client.py  gpt_client.py  local_llm.py  model_factory.py
src/prompts/: __init__.py  templates.py
